# src/routes/index.js
@@ -52,6 +52,7 @@ module.exports = (app) => {
 		}
 
 		if (
+			controllerResponse &&
 			controllerResponse.statusCode !== 200 &&
 			controllerResponse.statusCode !== 201 &&
 			controllerResponse.statusCode !== 202
@@ -59,12 +60,14 @@ module.exports = (app) => {
 			/* If error obtained then global error handler gets executed */
 			return next(controllerResponse)
 		}
-		res.status(controllerResponse.statusCode).json({
-			responseCode: controllerResponse.responseCode,
-			message: controllerResponse.message,
-			result: controllerResponse.result,
-			meta: controllerResponse.meta,
-		})
+		if (controllerResponse) {
+			res.status(controllerResponse.statusCode).json({
+				responseCode: controllerResponse.responseCode,
+				message: controllerResponse.message,
+				result: controllerResponse.result,
+				meta: controllerResponse.meta,
+			})
+		}
 	}
 
 	app.all(process.env.APPLICATION_BASE_URL + ':version/:controller/:method', validator, router)
